--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,8 +20,8 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <a href="https://autonomy.design"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
-          <a href="https://autonomy.design"><h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2></a>
+          <a href="https://autonomy.design"><h1 id="project_title">{{ title | site.title | default: site.github.repository_name }}</h1></a>
+          <a href="https://autonomy.design"><h2 id="project_tagline">{{ description | site.description | default: site.github.project_tagline }}</h2></a>
 
           {% if site.show_downloads %}
             <section id="downloads">
