--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,8 +20,8 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <a href="https://autonomy.design"><h1 id="project_title">{{ title | site.title | default: site.github.repository_name }}</h1></a>
-          <a href="https://autonomy.design"><h2 id="project_tagline">{{ description | site.description | default: site.github.project_tagline }}</h2></a>
+          <a href="https://autonomy.design"><h1 id="project_title">{{ page.title | site.title | default: site.github.repository_name }}</h1></a>
+          <a href="https://autonomy.design"><h2 id="project_tagline">{{ page.description | site.description | default: site.github.project_tagline }}</h2></a>
 
           {% if site.show_downloads %}
             <section id="downloads">
@@ -43,7 +43,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         {% if site.github.is_project_page %}
-        <p class="copyright">{{ title | site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p class="copyright">{{ page.title | site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
