--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           {% if site.github.is_project_page %}
-            <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+            <a id="forkme_banner" href="{{ page.titleLink | site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
           <a href="{{ page.titleLink | 'https://autonomy.design' }}"><h1 id="project_title">{{ page.title | site.title | default: site.github.repository_name }}</h1></a>
